--- a/app/sass/layout/_base.sass
+++ b/app/sass/layout/_base.sass
@@ -3,20 +3,21 @@ html
 	text-size-adjust: 100%
 	height: 100%
 body
-	min-width: calc(#{$container_width} + #{$container_border} + #{$container_border})
+	min-width: calc(#{$container_min_width} + #{$container_border} + #{$container_border})
 	min-height: 100%
 	padding: 0
 	margin: 0
 	position: relative
 
 .container
-	width: $container_width
+	min-width: $container_min_width
+	max-width: $container_max_width
 	margin: 0 auto
 	border-left: $container_border solid transparent
 	border-right: $container_border solid transparent
 
 .clear
-	clear: both;
+	clear: both
 
 .overflow-hidden
 	overflow: hidden
