--- a/app/sass/modal/_base.sass
+++ b/app/sass/modal/_base.sass
@@ -21,7 +21,7 @@
 	display: table
 	width: 100%
 	height: 100%
-	min-width: calc(#{$container_width} + #{$container_border} + #{$container_border})
+	min-width: calc(#{$container_min_width} + #{$container_border} + #{$container_border})
 .modal-td
 	display: table-cell
 	vertical-align: middle
