--- a/app/sass/layout/_base.sass
+++ b/app/sass/layout/_base.sass
@@ -16,7 +16,7 @@ body
 	border-right: $container_border solid transparent
 
 .clear
-	clear: both;
+	clear: both
 
 .overflow-hidden
 	overflow: hidden
