--- a/app/test.pug
+++ b/app/test.pug
@@ -24,14 +24,14 @@ html
 		
 		// .header
 		header.header
-			.container
+			div.container
 				p Header
 		// .header end
 		
 		
 		// .content
 		main.content
-			.container
+			div.container
 				h1 Hello World
 				a(href='#')
 					img(src='./img/catalog/example-1.jpg' alt='')
@@ -40,7 +40,7 @@ html
 		
 		// .footer
 		footer.footer
-			.container
+			div.container
 				p Footer
 		// .footer end
 		
