--- a/app/test.pug
+++ b/app/test.pug
@@ -26,7 +26,7 @@ html
 		header.header
 			div.container
 				p Header
-		// .header end
+		// /.header
 		
 		
 		// .content
@@ -35,17 +35,17 @@ html
 				h1 Hello World
 				a(href='#')
 					img(src='./img/catalog/example-1.jpg' alt='')
-		// .content end
+		// /.content
 		
 		
 		// .footer
 		footer.footer
 			div.container
 				p Footer
-		// .footer end
+		// /.footer
 		
 		
 		// scripts
 		script(src='./js/libs.min.js')
 		script(src='./js/main.js')
-		// scripts end
+		// /scripts
