--- a/app/sass/layout/_content.sass
+++ b/app/sass/layout/_content.sass
@@ -1,5 +1,7 @@
 .content
-	padding: 19px 0 calc(#{$footer_height} + 130px) 0
+	border-top: $header_height solid transparent
+	border-bottom: $footer_height solid transparent
+	padding: 20px 0
 	img
 		max-width: 100%
 	table
