--- a/app/sass/layout/_header.sass
+++ b/app/sass/layout/_header.sass
@@ -1,7 +1,11 @@
 .header
+	width: 100%
 	height: $header_height
 	line-height: $header_height
 	border-bottom: 1px solid #ddd
+	position: absolute
+	left: 0
+	top: 0
 	.container
 		position: relative
 		min-height: 100%
