--- a/app/sass/print/_typography.sass
+++ b/app/sass/print/_typography.sass
@@ -13,23 +13,31 @@ a
 
 
 h1
+	font-family: inherit
 	font-size: 60px
 	line-height: 1.6
+	font-weight: 400
 	padding: 0
 	margin: 0
 h2
+	font-family: inherit
 	font-size: 44px
 	line-height: 1.6
+	font-weight: 400
 	padding: 0
 	margin: 0
 h3
+	font-family: inherit
 	font-size: 32px
 	line-height: 1.6
+	font-weight: 400
 	padding: 0
 	margin: 0
 h4
+	font-family: inherit
 	font-size: 24px
 	line-height: 1.6
+	font-weight: 400
 	padding: 0
 	margin: 0
 
